--- a/index.html
+++ b/index.html
@@ -11,5 +11,15 @@
 
   <header>
     <h1>Grains</h1>
+    <img class "left" src="images/grain-left.jpg" alt="">
+    <img class "right" src="images/grain-right.jpg" alt="">
+    
+      <nav>
+        <ol>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Cereals</a></li>
+          <li><a href="#">Legumes</a></li>
+        </ol>
+      </nav>
 </body>
 </html>
