--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
   <header>
     <h1>Grains</h1>
-    <img class "left" src="images/grain-left.jpg" alt="">
-    <img class "right" src="images/grain-right.jpg" alt="">
-    
+    <img src="images/grain-left.jpg" alt="grain-left" class "left">
+    <img src="images/grain-right.jpg" alt="grain-right" class "right">
+
       <nav>
         <ol>
           <li><a href="#">Home</a></li>
@@ -21,5 +21,6 @@
           <li><a href="#">Legumes</a></li>
         </ol>
       </nav>
+    </header>
 </body>
 </html>
